[package]
name = "liquid-types"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
build = "build.rs" # LALRPOP preprocessing

[dependencies]
libc = "0.2.9"
lazy_static = "0.1.15"
unicode-xid = "0.0.3"
rustproof-libsmt = { git = "https://github.com/bpowers/libsmt.rs", rev = "ef0bcb7bdf" }

# Add a dependency on the LALRPOP runtime library:
[dependencies.lalrpop-util]
version = "0.12.1"

[build-dependencies.lalrpop]
version = "0.12.1"
