[package]
name = "liquid-types"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
libc = "0.2"
lazy_static = "1"
unicode-xid = "0.2.0"
z3 = { git = "https://github.com/prove-rs/z3.rs", rev = "3c6ab61482c64b083e79e6ccf550a5fb1e87b0a9" }
lalrpop-util = "0.19"

[build-dependencies]
lalrpop = "0.19"
